--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Hydra Template
+title: Sherlock - Discord NFT Bot
 url: "https://proud-alligator.cloudvent.net"
 baseurl:
 google_analytics_key:
@@ -9,16 +9,8 @@ google_maps_javascript_api_key:
 disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: /siteicon.png
-description: Product marketing template for Jekyll.
-author:
-  name:
-  email:
-  twitter: # twitter username without the @ symbol
-social:
-  name: Hydra Template
-  links:
-    - https://github.com/CloudCannon/hydra-jekyll-template
+logo: /images/logo.png
+description: Analyse The Hype - Inform Your Team
 
 # -----
 # Build
